fix bugs "gap" have no support on Safar and ios

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
+    grid-gap: 1.2rem;
 }
 
 input,
