--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@ footer {
     display: flex;
     justify-content: center;
     gap: 1.2rem;
+    grid-gap: 1.2rem;
     margin: 0 0 3.8rem -0.9rem; 
 }
 
