--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -67,13 +67,7 @@ header {
         padding-top: 2rem;
     }
 
-    .mycv {
-        display: flex;
-        gap: 2rem;
-    }
-
-    .header__socials,
-    .scroll__down {
+    .header__socials {
         display: none;
     }
 
